fix splash screen layout shift

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -78,15 +78,19 @@ footer {
 }
 
 .splash-screen-content {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-  height: 100%;
+  min-width: 192px;
+  max-width: 75vw;
+  height: 192px;
+  text-align: center;
+}
+
+.splash-screen-content > img {
+  display: block;
+  margin: 0 auto;
 }
 
 .splash-screen-content .MuiTypography-overline {
+  display: block;
   font-weight: 400;
   font-size: 0.75rem;
   line-height: 2.66;
@@ -96,6 +100,7 @@ footer {
 }
 
 .splash-screen-content .MuiTypography-subtitle2 {
+  display: block;
   font-weight: 500;
   font-size: 0.875rem;
   line-height: 1.57;
